<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@drawable/tie_dye_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnSyncPortal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_from_portal"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/button_green"/>

    <Button
        android:id="@+id/btnResetProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_profile"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/button_green"/>

    <Button
        android:id="@+id/btnUpgrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/button_green"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:backgroundTint="@color/button_green"/>

</LinearLayout>
